open api spec, setup md
